--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contactate con Tranki Punki">
     <meta name="keywords" content="tranki punki, musica, discos, marea negra, no me digas que no pasa nada, en vivo en el cck, gypsy punk, cordoba, argentina, musica punk, banda fiestera, musica de pibas, canciones feministas, musica feminista">
+    <link rel="icon" type="image/png" href="./imagenes/favicons/favicon16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="./imagenes/favicons/favicon32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="./imagenes/favicons/favicon96x96.png" sizes="96x96">
     <link rel="stylesheet" href="./css/NORMALIZE.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
