--- a/galeria.html
+++ b/galeria.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <a href="index.html">
-                    <img src="imagenes/tranki-punki-logo-header.svg" width="30" alt="logo de tranki punki">
+                    <img src="imagenes/tranki-punki-logo-header.svg" width="30" alt="Logo de tranki punki">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -48,10 +48,10 @@
                         <a class="nav-link" href="prensa.html">PRENSA</a></li>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         CONTACTO
                         </a>
-                        <ul class="dropdown-menu menuDecoration" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu menu-decoration" aria-labelledby="">
                             <li><a class="dropdown-item" href="contacto.html">FORMULARIO</a></li>
                             <li><a class="dropdown-item" href="https://api.whatsapp.com/send?phone=5493513448676&text=Hola%2C%20quisiera%20contactarme%20con%20la%20representante%20de%20la%20banda." target="_blank">WHATSAPP</a></li>
                         </ul>
@@ -64,7 +64,7 @@
     </header>
     <!-- Título Imagen Responsive -->
     <div class="titulo">
-        <h1><img class="titulo--sin-animacion" src="imagenes/Titulotrankipunki.png" alt="Galería de fotos de Tranki Punki"></h1>
+        <h1><img class="titulo-sin-animacion" src="imagenes/tranki-punki-titulo.png" alt="Galería de fotos de Tranki Punki"></h1>
     </div>
     <!-- Sección de la Galería -->
     <h2>GALERÍA</h2>
@@ -137,7 +137,7 @@
     <hr> 
     <footer>
         <p>Copyright © 2021 <strong>Tranki Punki</strong></p>
-        <p class="footer--textoderechos"><em>Todos los derechos reservados</em></p>
+        <p class="texto-derechos"><em>Todos los derechos reservados</em></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> 
