--- a/musica.html
+++ b/musica.html
@@ -48,10 +48,10 @@
                         <a class="nav-link" href="prensa.html">PRENSA</a></li>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         CONTACTO
                         </a>
-                        <ul class="dropdown-menu menuDecoration" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu menu-decoration" aria-labelledby="">
                             <li><a class="dropdown-item" href="contacto.html">FORMULARIO</a></li>
                             <li><a class="dropdown-item" href="https://api.whatsapp.com/send?phone=5493513448676&text=Hola%2C%20quisiera%20contactarme%20con%20la%20representante%20de%20la%20banda." target="_blank">WHATSAPP</a></li>
                         </ul>
@@ -64,23 +64,23 @@
     </header>
     <!-- Título Imagen Responsive -->
     <div class="titulo">
-        <h1><img class="titulo--sin-animacion" src="imagenes/Titulotrankipunki.png" alt="Música de Tranki Punki"></h1>
+        <h1><img class="titulo-sin-animacion" src="imagenes/tranki-punki-titulo.png" alt="Música de Tranki Punki"></h1>
     </div> 
     <!-- Sección de Música -->
     <section class="section-musica">
         <h2>Música</h2>
-        <div class="section-musica__bloque">
+        <div class="bloque">
             <div>
-                <h3 class="section-musica__bloque--hmusica">En vivo en el CCK (2020)</h3>
-                <iframe class="section-musica__bloque--iframe-musica" src="https://bandcamp.com/EmbeddedPlayer/album=2037900265/size=large/bgcol=ffffff/linkcol=7137dc/tracklist=false/transparent=true/" seamless><a href="https://trankipunki.bandcamp.com/album/en-vivo-en-el-cck">En vivo en el CCK by Tranki Punki</a></iframe>  
+                <h3>En vivo en el CCK (2020)</h3>
+                <iframe class="iframe-musica" src="https://bandcamp.com/EmbeddedPlayer/album=2037900265/size=large/bgcol=ffffff/linkcol=7137dc/tracklist=false/transparent=true/" seamless><a href="https://trankipunki.bandcamp.com/album/en-vivo-en-el-cck">En vivo en el CCK by Tranki Punki</a></iframe>  
             </div>
             <div>
-                <h3 class="section-musica__bloque--hmusica">Marea Negra (2020)</h3>
-                <iframe class="section-musica__bloque--iframe-musica" src="https://bandcamp.com/EmbeddedPlayer/album=3537072935/size=large/bgcol=ffffff/linkcol=de270f/tracklist=false/transparent=true/" seamless><a href="https://trankipunki.bandcamp.com/album/marea-negra">Marea Negra by Tranki Punki</a></iframe>
+                <h3>Marea Negra (2020)</h3>
+                <iframe class="iframe-musica" src="https://bandcamp.com/EmbeddedPlayer/album=3537072935/size=large/bgcol=ffffff/linkcol=de270f/tracklist=false/transparent=true/" seamless><a href="https://trankipunki.bandcamp.com/album/marea-negra">Marea Negra by Tranki Punki</a></iframe>
             </div>          
             <div>
-                <h3 class="section-musica__bloque--hmusica">No me digas que no pasa nada (2016)</h3>
-                <iframe class="section-musica__bloque--iframe-musica" src="https://bandcamp.com/EmbeddedPlayer/album=2834374259/size=large/bgcol=ffffff/linkcol=163a28/tracklist=false/transparent=true/" seamless><a href="https://trankipunki.bandcamp.com/album/no-me-digas-que-no-pasa-nada">No me digas que no pasa nada by Tranki Punki</a></iframe>
+                <h3>No me digas que no pasa nada (2016)</h3>
+                <iframe class="iframe-musica" src="https://bandcamp.com/EmbeddedPlayer/album=2834374259/size=large/bgcol=ffffff/linkcol=163a28/tracklist=false/transparent=true/" seamless><a href="https://trankipunki.bandcamp.com/album/no-me-digas-que-no-pasa-nada">No me digas que no pasa nada by Tranki Punki</a></iframe>
             </div>
         </div>
     </section>
@@ -88,7 +88,7 @@
     <hr> 
     <footer>
         <p>Copyright © 2021 <strong>Tranki Punki</strong></p>
-        <p class="footer--textoderechos"><em>Todos los derechos reservados</em></p>
+        <p class="texto-derechos"><em>Todos los derechos reservados</em></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> 
