--- a/prensa.html
+++ b/prensa.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <a href="index.html">
-                    <img src="imagenes/tranki-punki-logo-header.svg" width="30" alt="logo de tranki punki">
+                    <img src="imagenes/tranki-punki-logo-header.svg" width="30" alt="Logo de tranki punki">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -48,10 +48,10 @@
                         <a class="nav-link" href="prensa.html">PRENSA</a></li>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         CONTACTO
                         </a>
-                        <ul class="dropdown-menu menuDecoration" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu menu-decoration" aria-labelledby="">
                             <li><a class="dropdown-item" href="contacto.html">FORMULARIO</a></li>
                             <li><a class="dropdown-item" href="https://api.whatsapp.com/send?phone=5493513448676&text=Hola%2C%20quisiera%20contactarme%20con%20la%20representante%20de%20la%20banda." target="_blank">WHATSAPP</a></li>
                         </ul>
@@ -64,41 +64,41 @@
     </header>
     <!-- Título Imagen Responsive -->
     <div class="titulo">
-        <h1><img class="titulo--sin-animacion" src="imagenes/Titulotrankipunki.png" alt="Notas de prensa de Tranki Punki"></h1>
+        <h1><img class="titulo-sin-animacion" src="imagenes/tranki-punki-titulo.png" alt="Notas de prensa de Tranki Punki"></h1>
     </div> 
     <!-- Sección de Prensa -->
     <h2>PRENSA</h2>
     <p class="texto-en-bloque">Hacé click sobre el logo del medio que quieras leer. Ingresarás a notas sobre Tranki Punki.</p>
     <section class="seccion-prensa">
-        <main class="seccion-prensa__main">
-            <div class="seccion-prensa__main__link seccion-prensa__main__link--telam">
+        <main class="prensa-main">
+            <div class="prensa-link telam">
                 <a href="https://www.telam.com.ar/notas/202005/466977-rock-tranki-punki-musica.html" target="_blank">
-                    <img class="seccion-prensa__main__link--width" src="imagenes/logosprensa/telam.png" alt="Logo de Agencia de Noticias Telam">
+                    <img class="prensa-link-width" src="imagenes/logosprensa/telam.png" alt="Logo de Agencia de Noticias Telam">
                 </a>
             </div>
-            <div class="seccion-prensa__main__link seccion-prensa__main__link--indiehoy">
+            <div class="prensa-link indiehoy">
                 <a href="https://indiehoy.com/noticias/tranki-punki-publica-ep-en-vivo-grabado-en-el-cck/" target="_blank">
-                    <img class="seccion-prensa__main__link--width" src="imagenes/logosprensa/indiehoy.png" alt="Logo del medio Indie Hoy">
+                    <img class="prensa-link-width" src="imagenes/logosprensa/indiehoy.png" alt="Logo del medio Indie Hoy">
                 </a> 
             </div>
-            <div class="seccion-prensa__main__link seccion-prensa__main__link--laizquierdadiario">
+            <div class="prensa-link laizquierdadiario">
                 <a href="https://www.laizquierdadiario.com/Tranki-Punki-Hacemos-Punk-cordobes" target="_blank">
-                    <img class="seccion-prensa__main__link--width" src="imagenes/logosprensa/laizquierdadiario.png" alt="Logo del diario La Izquierda Diario">
+                    <img class="prensa-link-width" src="imagenes/logosprensa/laizquierdadiario.png" alt="Logo del diario La Izquierda Diario">
                 </a>
             </div>
-            <div class="seccion-prensa__main__link seccion-prensa__main__link--lavoz">
+            <div class="prensa-link lavoz">
                 <a href="https://www.lavoz.com.ar/vos/musica/tranki-punki-y-su-marea-negra-de-las-calles-de-cordoba-al-pais/" target="_blank">
-                    <img class="seccion-prensa__main__link--width" src="imagenes/logosprensa/lavoz.png" alt="Logo del diario La Voz del Interior">
+                    <img class="prensa-link-width" src="imagenes/logosprensa/lavoz.png" alt="Logo del diario La Voz del Interior">
                 </a>
             </div>
-            <div class="seccion-prensa__main__link seccion-prensa__main__link--marcha">
+            <div class="prensa-link marcha">
                 <a href="https://www.marcha.org.ar/tranki-punki-el-punk-de-la-vida-misma/" target="_blank">
-                    <img class="seccion-prensa__main__link--width" src="imagenes/logosprensa/marcha.png" alt="Logo del medio Marcha">
+                    <img class="prensa-link-width" src="imagenes/logosprensa/marcha.png" alt="Logo del medio Marcha">
                 </a>
             </div>
-            <div class="seccion-prensa__main__link seccion-prensa__main__link--cba24n">
+            <div class="prensa-link cba24n">
                 <a href="https://www.cba24n.com.ar/espectaculos/las-tranki-punki-cumplen-7-anos-y-estrenan-nuevos-videos_a5f88b233fa2b4132bc1314b4" target="_blank">
-                    <img class="seccion-prensa__main__link--width" src="imagenes/logosprensa/cba24n.png" alt="Logo del medio Cba24n">
+                    <img class="prensa-link-width" src="imagenes/logosprensa/cba24n.png" alt="Logo del medio Cba24n">
                 </a>
             </div>
         </main>
@@ -107,7 +107,7 @@
     <hr> 
     <footer>
         <p>Copyright © 2021 <strong>Tranki Punki</strong></p>
-        <p class="footer--textoderechos"><em>Todos los derechos reservados</em></p>
+        <p class="texto-derechos"><em>Todos los derechos reservados</em></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
