SRCSET en Galería para imagenes verticales en mobile

--- a/galeria.html
+++ b/galeria.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <a href="index.html">
-                    <img src="imagenes/tranki-punki-logo-header.svg" width="30" alt="Logo de tranki punki">
+                    <img class="logo-en-menu" src="imagenes/tranki-punki-logo-header.svg" alt="Logo de tranki punki">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -89,34 +89,62 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="imagenes/galeria/tranki-punki-galeria-01.jpg" class="d-block w-100" alt="Tranki Punki Foto de prensa en estacionamiento">
+                            <picture>
+                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-01-vertical.jpg"class="d-block" alt="Tranki Punki Foto de prensa en estacionamiento">
+                                <img src="imagenes/galeria/tranki-punki-galeria-01.jpg" class="d-block w-100" alt="Tranki Punki Foto de prensa en estacionamiento">
+                            </picture>
                         </div>
                         <div class="carousel-item">
-                            <img src="imagenes/galeria/tranki-punki-galeria-02.jpg" class="d-block w-100" alt="Tranki Punki Foto con público">
+                            <picture>
+                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-02-vertical.jpg"class="d-block" alt="Tranki Punki Foto con público">
+                                <img src="imagenes/galeria/tranki-punki-galeria-02.jpg" class="d-block w-100" alt="Tranki Punki Foto con público">
+                            </picture>
                         </div>
                         <div class="carousel-item">
-                            <img src="imagenes/galeria/tranki-punki-galeria-03.jpg" class="d-block w-100" alt="Tranki Punki Foto Acordeonista en el Konex">
+                            <picture>
+                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-03-vertical.jpg"class="d-block" alt="Tranki Punki Foto Acordeonista en el Konex">
+                                <img src="imagenes/galeria/tranki-punki-galeria-03.jpg" class="d-block w-100" alt="Tranki Punki Foto Acordeonista en el Konex">
+                            </picture>
                         </div>
                         <div class="carousel-item">
-                            <img src="imagenes/galeria/tranki-punki-galeria-04.jpg" class="d-block w-100" alt="Tranki Punki Foto de Baterista en Show Marea Negra">
+                            <picture>
+                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-04-vertical.jpg"class="d-block" alt="Tranki Punki Foto de Baterista en Show Marea Negra">
+                                <img src="imagenes/galeria/tranki-punki-galeria-04.jpg" class="d-block w-100" alt="Tranki Punki Foto de Baterista en Show Marea Negra">
+                            </picture>
                         </div>
                         <div class="carousel-item">
-                            <img src="imagenes/galeria/tranki-punki-galeria-05.jpg" class="d-block w-100" alt="Tranki Punki Foto de Bajista en blanco y negro">
+                            <picture>
+                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-05-vertical.jpg"class="d-block" alt="Tranki Punki Foto de Bajista en blanco y negro">
+                                <img src="imagenes/galeria/tranki-punki-galeria-05.jpg" class="d-block w-100" alt="Tranki Punki Foto de Bajista en blanco y negro">
+                            </picture>
                         </div>
                         <div class="carousel-item">
-                            <img src="imagenes/galeria/tranki-punki-galeria-06.jpg" class="d-block w-100" alt="Tranki Punki Foto de Percusionista en el CCK">
+                            <picture>
+                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-06-vertical.jpg"class="d-block" alt="Tranki Punki Foto de Percusionista en el CCK">
+                                <img src="imagenes/galeria/tranki-punki-galeria-06.jpg" class="d-block w-100" alt="Tranki Punki Foto de Percusionista en el CCK">
+                            </picture>
                         </div>
                         <div class="carousel-item">
-                            <img src="imagenes/galeria/tranki-punki-galeria-07.jpg" class="d-block w-100" alt="Tranki Punki Foto de Violinista en Club Paraguay">
+                            <picture>
+                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-07-vertical.jpg"class="d-block" alt="Tranki Punki Foto de Violinista en Club Paraguay">
+                                <img src="imagenes/galeria/tranki-punki-galeria-07.jpg" class="d-block w-100" alt="Tranki Punki Foto de Violinista en Club Paraguay">
                         </div>
                         <div class="carousel-item">
-                            <img src="imagenes/galeria/tranki-punki-galeria-08.jpg" class="d-block w-100" alt="Tranki Punki Foto de prensa en sillón">
+                            <picture>
+                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-08-vertical.jpg"class="d-block" alt="Tranki Punki Foto de Violinista en Club Paraguay">
+                                <img src="imagenes/galeria/tranki-punki-galeria-08.jpg" class="d-block w-100" alt="Tranki Punki Foto de prensa en sillón">
+                            </picture>
                         </div>
                         <div class="carousel-item">
-                            <img src="imagenes/galeria/tranki-punki-galeria-09.jpg" class="d-block w-100" alt="Tranki Punki Foto de la banda tocando en vivo">
+                            <picture>
+                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-09-vertical.jpg"class="d-block" alt="Tranki Punki Foto de la Guitarrista tocando en vivo">
+                                <img src="imagenes/galeria/tranki-punki-galeria-09.jpg" class="d-block w-100" alt="Tranki Punki Foto de la banda tocando en vivo">
                         </div>
                         <div class="carousel-item">
-                            <img src="imagenes/galeria/tranki-punki-galeria-10.jpg" class="d-block w-100" alt="Tranki Punki Foto de la banda tocando en vivo">
+                            <picture>
+                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-10-vertical.jpg"class="d-block" alt="Tranki Punki Foto de la Guitarrista tocando en vivo">
+                                <img src="imagenes/galeria/tranki-punki-galeria-10.jpg" class="d-block w-100" alt="Tranki Punki Foto de la banda tocando en vivo">
+                            </picture>
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
