--- a/videos.html
+++ b/videos.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <a href="index.html">
-                    <img src="imagenes/tranki-punki-logo-header.svg" width="30" alt="logo de tranki punki">
+                    <img class="logo-en-menu" src="imagenes/tranki-punki-logo-header.svg" alt="Logo de tranki punki">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
