--- a/contacto.html
+++ b/contacto.html
@@ -118,7 +118,7 @@
     <hr> 
     <footer>
         <p>Copyright © 2021 <strong>Tranki Punki</strong></p>
-        <p class="footer--textoderechos"><em>Todos los derechos reservados</em></p>
+        <p class="texto-derechos"><em>Todos los derechos reservados</em></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
