--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
     </header>
     <!-- Título Imagen Responsive -->
     <main class="container">
-        <div class="row"> 
+        <video class="video" autoplay muted loop>  
+            <source src="multimedia/tranki-punki-video-index.mp4" type="video/mp4" alt="video loop Tranki Punki tocando en vivo"> 
+        </video>
+        <div class="row">
             <div class="col-1">
             </div>
             <div class="col-10">
@@ -74,10 +77,7 @@
             </div>
         </div>
     </main>
-    <!-- Vídeo portada y Player Audio -->
-    <video class="video" autoplay muted loop>  
-        <source src="multimedia/tranki-punki-video-index.mp4" type="video/mp4" alt="video loop Tranki Punki tocando en vivo"> 
-    </video>
+    <!-- Player Audio -->
     <audio controls class="audio-player">
         <source src="multimedia/tranki-punki-cancion-fuego-index.mp3" type="audio/mpeg">
     </audio>
