--- a/galeria.html
+++ b/galeria.html
@@ -90,59 +90,59 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <picture>
-                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-01-vertical.jpg"class="d-block" alt="Tranki Punki Foto de prensa en estacionamiento">
+                                <source media="(orientation: portrait)" srcset="imagenes/galeria/tranki-punki-galeria-01-vertical.jpg"class="d-block" alt="Tranki Punki Foto de prensa en estacionamiento">
                                 <img src="imagenes/galeria/tranki-punki-galeria-01.jpg" class="d-block w-100" alt="Tranki Punki Foto de prensa en estacionamiento">
                             </picture>
                         </div>
                         <div class="carousel-item">
                             <picture>
-                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-02-vertical.jpg"class="d-block" alt="Tranki Punki Foto con público">
+                                <source media="(orientation: portrait)" srcset="imagenes/galeria/tranki-punki-galeria-02-vertical.jpg"class="d-block" alt="Tranki Punki Foto con público">
                                 <img src="imagenes/galeria/tranki-punki-galeria-02.jpg" class="d-block w-100" alt="Tranki Punki Foto con público">
                             </picture>
                         </div>
                         <div class="carousel-item">
                             <picture>
-                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-03-vertical.jpg"class="d-block" alt="Tranki Punki Foto Acordeonista en el Konex">
+                                <source media="(orientation: portrait)" srcset="imagenes/galeria/tranki-punki-galeria-03-vertical.jpg"class="d-block" alt="Tranki Punki Foto Acordeonista en el Konex">
                                 <img src="imagenes/galeria/tranki-punki-galeria-03.jpg" class="d-block w-100" alt="Tranki Punki Foto Acordeonista en el Konex">
                             </picture>
                         </div>
                         <div class="carousel-item">
                             <picture>
-                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-04-vertical.jpg"class="d-block" alt="Tranki Punki Foto de Baterista en Show Marea Negra">
+                                <source media="(orientation: portrait)" srcset="imagenes/galeria/tranki-punki-galeria-04-vertical.jpg"class="d-block" alt="Tranki Punki Foto de Baterista en Show Marea Negra">
                                 <img src="imagenes/galeria/tranki-punki-galeria-04.jpg" class="d-block w-100" alt="Tranki Punki Foto de Baterista en Show Marea Negra">
                             </picture>
                         </div>
                         <div class="carousel-item">
                             <picture>
-                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-05-vertical.jpg"class="d-block" alt="Tranki Punki Foto de Bajista en blanco y negro">
+                                <source media="(orientation: portrait)" srcset="imagenes/galeria/tranki-punki-galeria-05-vertical.jpg"class="d-block" alt="Tranki Punki Foto de Bajista en blanco y negro">
                                 <img src="imagenes/galeria/tranki-punki-galeria-05.jpg" class="d-block w-100" alt="Tranki Punki Foto de Bajista en blanco y negro">
                             </picture>
                         </div>
                         <div class="carousel-item">
                             <picture>
-                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-06-vertical.jpg"class="d-block" alt="Tranki Punki Foto de Percusionista en el CCK">
+                                <source media="(orientation: portrait)" srcset="imagenes/galeria/tranki-punki-galeria-06-vertical.jpg"class="d-block" alt="Tranki Punki Foto de Percusionista en el CCK">
                                 <img src="imagenes/galeria/tranki-punki-galeria-06.jpg" class="d-block w-100" alt="Tranki Punki Foto de Percusionista en el CCK">
                             </picture>
                         </div>
                         <div class="carousel-item">
                             <picture>
-                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-07-vertical.jpg"class="d-block" alt="Tranki Punki Foto de Violinista en Club Paraguay">
+                                <source media="(orientation: portrait)" srcset="imagenes/galeria/tranki-punki-galeria-07-vertical.jpg"class="d-block" alt="Tranki Punki Foto de Violinista en Club Paraguay">
                                 <img src="imagenes/galeria/tranki-punki-galeria-07.jpg" class="d-block w-100" alt="Tranki Punki Foto de Violinista en Club Paraguay">
                         </div>
                         <div class="carousel-item">
                             <picture>
-                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-08-vertical.jpg"class="d-block" alt="Tranki Punki Foto de Violinista en Club Paraguay">
+                                <source media="(orientation: portrait)" srcset="imagenes/galeria/tranki-punki-galeria-08-vertical.jpg"class="d-block" alt="Tranki Punki Foto de Violinista en Club Paraguay">
                                 <img src="imagenes/galeria/tranki-punki-galeria-08.jpg" class="d-block w-100" alt="Tranki Punki Foto de prensa en sillón">
                             </picture>
                         </div>
                         <div class="carousel-item">
                             <picture>
-                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-09-vertical.jpg"class="d-block" alt="Tranki Punki Foto de la Guitarrista tocando en vivo">
+                                <source media="(orientation: portrait)" srcset="imagenes/galeria/tranki-punki-galeria-09-vertical.jpg"class="d-block" alt="Tranki Punki Foto de la Guitarrista tocando en vivo">
                                 <img src="imagenes/galeria/tranki-punki-galeria-09.jpg" class="d-block w-100" alt="Tranki Punki Foto de la banda tocando en vivo">
                         </div>
                         <div class="carousel-item">
                             <picture>
-                                <source media="(orientation: portrait) and (max-width: 480px)" srcset="imagenes/galeria/tranki-punki-galeria-10-vertical.jpg"class="d-block" alt="Tranki Punki Foto de la Guitarrista tocando en vivo">
+                                <source media="(orientation: portrait)" srcset="imagenes/galeria/tranki-punki-galeria-10-vertical.jpg"class="d-block" alt="Tranki Punki Foto de la Guitarrista tocando en vivo">
                                 <img src="imagenes/galeria/tranki-punki-galeria-10.jpg" class="d-block w-100" alt="Tranki Punki Foto de la banda tocando en vivo">
                             </picture>
                         </div>
