Corrección en el menú de la página contacto

--- a/contacto.html
+++ b/contacto.html
@@ -51,7 +51,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         CONTACTO
                         </a>
-                        <ul class="dropdown-menu menuDecoration" aria-labelledby="">
+                        <ul class="dropdown-menu menu-decoration" aria-labelledby="">
                             <li><a class="dropdown-item" href="contacto.html">FORMULARIO</a></li>
                             <li><a class="dropdown-item" href="https://api.whatsapp.com/send?phone=5493513448676&text=Hola%2C%20quisiera%20contactarme%20con%20la%20representante%20de%20la%20banda." target="_blank">WHATSAPP</a></li>
                         </ul>
