Agregando placeholder en formulario y Mixin efecto sacudir

--- a/contacto.html
+++ b/contacto.html
@@ -102,7 +102,7 @@
                         <input type="radio" name="genero" value="Otrx"> Otrx
                     </div>
                     <div class="formulario">
-                        <textarea class="textarea-width" name="comentarios" id="" cols="45" rows="10"> Escribí aquí tus comentarios.</textarea>
+                        <textarea class="textarea-width" name="comentarios" id="" cols="45" rows="10" placeholder="Escribí aquí tus comentarios."></textarea>
                     </div>
                     <div class="formulario">
                         <label for="mayor">Soy mayor de 18 años.</label>
