--- a/galeria.html
+++ b/galeria.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>Tranki Punki - Galería 🍻</title>
+    <title>Tranki Punki - Galería</title>
 </head>
 <body>
     <!-- Encabezado -->
@@ -64,7 +64,7 @@
     </header>
     <!-- Título Imagen Responsive -->
     <div class="titulo">
-        <h1><img class="titulo-sin-animacion" src="imagenes/tranki-punki-titulo.png" alt="Galería de fotos de Tranki Punki"></h1>
+        <img class="titulo-sin-animacion" src="imagenes/tranki-punki-titulo.png" alt="Galería de fotos de Tranki Punki">
     </div>
     <!-- Sección de la Galería -->
     <h2>GALERÍA</h2>
@@ -162,15 +162,77 @@
         </div>
     </section>
     <!-- Pie de página -->
+    <!-- Pie de página -->
     <footer>
-        <div class="footer-paginas">
+        <div class="footer-del-index">
             <hr> 
-            <p>Copyright © 2021 <strong>Tranki Punki</strong></p>
-            <p class="texto-derechos"><em>Todos los derechos reservados</em></p>
-        </div>
+            <h1>TrankiPunki.com - Galería</h1>
+            <!-- Menú del footer-->
+            <nav class="nav-del-footer">
+                <ul class="nav-del-footer-main">
+                    <li class="inicio-li">
+                        <a class="footer-nav-link" href="#">INICIO</a>
+                    </li>
+                    <li class="bio-li">
+                        <a class="footer-nav-link" href="bio.html">BIO</a>
+                    </li>
+                    <li class="musica-li">
+                        <a class="footer-nav-link" href="musica.html">MÚSICA</a>
+                    </li>
+                    <li class="videos-li">
+                        <a class="footer-nav-link" href="videos.html">VÍDEOS</a>
+                    </li>
+                    <li class="galeria-li">
+                        <a class="footer-nav-link" href="galeria.html">GALERÍA</a>
+                    </li>
+                    <li class="prensa-li">
+                        <a class="footer-nav-link" href="prensa.html">PRENSA</a>
+                    </li>
+                    <li class="contacto-li">
+                        <a class="footer-nav-link" href="contacto.html">CONTACTO</a>
+                    </li>
+                </ul>
+            </nav>
+            <!-- Redes sociales -->
+            <div class="rrss">
+                <main class="rrss-main">
+                    <div class="rrss-link instagram">
+                        <a href="https://www.instagram.com/tranki_punki/" target="_blank">
+                            <img class="rrss-width" src="imagenes/redes-sociales/instagram.svg" alt="Logo de Instagram">
+                        </a>
+                    </div>
+                    <div class="rrss-link facebook">
+                        <a href="https://www.facebook.com/trankipunki" target="_blank">
+                            <img class="rrss-width" src="imagenes/redes-sociales/facebook.svg" alt="Logo de Facebook">
+                        </a> 
+                    </div>
+                    <div class="rrss-link youtube">
+                        <a href="https://www.youtube.com/channel/UCflgrAJGIh7tVr_kAPMv_jQ" target="_blank">
+                            <img class="rrss-width" src="imagenes/redes-sociales/youtube.svg" alt="Logo de YouTube">
+                        </a>
+                    </div>
+                    <div class="rrss-link twitter">
+                        <a href="https://twitter.com/trankipunki" target="_blank">
+                            <img class="rrss-width" src="imagenes/redes-sociales/twitter.svg" alt="Logo de Twitter">
+                        </a>
+                    </div>
+                    <div class="rrss-link spotify">
+                        <a href="https://open.spotify.com/artist/1voO7UCR96uHnMVl0uyMp7" target="_blank">
+                            <img class="rrss-width" src="imagenes/redes-sociales/spotify.svg" alt="Logo de Spotify">
+                        </a>
+                    </div>
+                    <div class="rrss-link whatsapp">
+                        <a href="https://api.whatsapp.com/send?phone=5493513448676&text=Hola%2C%20quisiera%20contactarme%20con%20la%20representante%20de%20la%20banda." target="_blank">
+                            <img class="rrss-width" src="imagenes/redes-sociales/whatsapp.svg" alt="Logo de Whatsapp">
+                        </a>
+                    </div>
+                </main>
+            </div>            
+            <p class="color-verde">Copyright © 2021. Todos los derechos reservados.</p>
+            <p class="color-blanco">Diseño & Desarrollo Web: <a class="color-fucsia" href="https://github.com/vbarturen"target="_blank">Vicky Barturen</a></p> 
+            </div>
     </footer>
     <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
