--- a/contacto.html
+++ b/contacto.html
@@ -116,7 +116,7 @@
     </section>
     <!-- Pie de página -->
     <footer>
-        <div class="footer-del-index">
+        <div class="footer-general">
             <hr> 
             <h1>TrankiPunki.com - Formulario</h1>
             <!-- Menú del footer-->
