--- a/galeria.html
+++ b/galeria.html
@@ -67,7 +67,8 @@
         <img class="titulo-sin-animacion" src="imagenes/tranki-punki-titulo.png" alt="Galería de fotos de Tranki Punki">
     </div>
     <!-- Sección de la Galería -->
-    <h2>GALERÍA</h2>
+    <h2 class="h2-galeria">GALERÍA</h2>
+    <p class="texto-en-bloque-galeria">Aquí podrás ver regristros fotográficos realizados por la fotógrafa <a href="https://www.instagram.com/dayolmos_/">Day Olmos.</a></p>
     <!-- Carrousel -->
     <section class= "container">
         <div class="row">
@@ -164,7 +165,7 @@
     <!-- Pie de página -->
     <!-- Pie de página -->
     <footer>
-        <div class="footer-del-index">
+        <div class="footer-galeria footer-general">
             <hr> 
             <h1>TrankiPunki.com - Galería</h1>
             <!-- Menú del footer-->
