--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </main>
     <!-- Pie de página -->
     <footer>
-        <div class="footer-del-index">
+        <div class="footer-general">
             <hr> 
             <h1>TrankiPunki.com - Inicio</h1>
             <!-- Menú del footer-->
