--- a/musica.html
+++ b/musica.html
@@ -86,7 +86,7 @@
     </section>
     <!-- Pie de página -->
     <footer>
-        <div class="footer-del-index">
+        <div class="footer-general">
             <hr> 
             <h1>TrankiPunki.com - Música</h1>
             <!-- Menú del footer-->
