--- a/prensa.html
+++ b/prensa.html
@@ -68,7 +68,9 @@
     </div> 
     <!-- Sección de Prensa -->
     <h2>PRENSA</h2>
-    <p class="texto-en-bloque">Hacé click sobre el logo del medio que quieras leer. Ingresarás a notas sobre Tranki Punki.</p>
+        <p class="texto-en-bloque">En esta sección encontrarás una selección de notas destacadas acerca de la vida de la banda y los lanzamientos de singles y discos que Tranki Punki ha realizado.
+        </p> 
+        <p class="texto-en-bloque">Hacé click/tap sobre el logo del medio que te interese leer:</p>
     <section class="seccion-prensa">
         <main class="prensa-main">
             <div class="prensa-link telam">
@@ -105,7 +107,7 @@
     </section>
     <!-- Pie de página -->
     <footer>
-        <div class="footer-del-index">
+        <div class="footer-prensa footer-general">
             <hr> 
             <h1>TrankiPunki.com - Notas de prensa</h1>
             <!-- Menú del footer-->
