--- a/videos.html
+++ b/videos.html
@@ -87,7 +87,7 @@
     </section>
     <!-- Pie de página -->
     <footer>
-        <div class="footer-del-index">
+        <div class="footer-videos footer-general">
             <hr> 
             <h1>TrankiPunki.com - Vídeos en vivo</h1>
             <!-- Menú del footer-->
