Reescritura de mediaqueries

--- a/videos.html
+++ b/videos.html
@@ -19,10 +19,10 @@
     <!-- Encabezado -->
     <header>
         <!-- Menú con Bootstrap-->
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-expand-sm navbar-dark">
+            <div class="container-fluid menu-con-bootstrap">
                 <a href="index.html">
-                    <img class="logo-en-menu" src="imagenes/tranki-punki-logo-header.svg" alt="Logo de tranki punki">
+                    <img class="logo-tp" src="imagenes/tranki-punki-logo-header.svg" alt="Logo de tranki punki">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -62,12 +62,12 @@
             <hr>
         </nav>
     </header>
-    <!-- Título Imagen Responsive -->
+    <!-- Título Imagen  -->
     <div class="titulo">
-        <img class="titulo-sin-animacion" src="imagenes/tranki-punki-titulo.png" alt="Titulo Tranki Punki">
-    </div>    
+        <img class="titulo-tp" src="imagenes/tranki-punki-titulo.png" alt="Biografía de Tranki Punki">
+    </div>     
     <!-- Sección de Vídeos en vivo -->
-    <section>
+    <section class="section-videos">
         <h2>Vídeos</h2>
         <h3>En vivo en Club Paraguay</h3>
         <div class="videos">
@@ -87,14 +87,14 @@
     </section>
     <!-- Pie de página -->
     <footer>
-        <div class="footer-videos footer-general">
+        <div class="pie-tp">
             <hr> 
             <h1>TrankiPunki.com - Vídeos en vivo</h1>
             <!-- Menú del footer-->
             <nav class="nav-del-footer">
                 <ul class="nav-del-footer-main">
                     <li class="inicio-li">
-                        <a class="footer-nav-link" href="#">INICIO</a>
+                        <a class="footer-nav-link" href="index.html">INICIO</a>
                     </li>
                     <li class="bio-li">
                         <a class="footer-nav-link" href="bio.html">BIO</a>
