--- a/galeria.html
+++ b/galeria.html
@@ -19,10 +19,10 @@
     <!-- Encabezado -->
     <header>
         <!-- Menú con Bootstrap-->
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-expand-sm navbar-dark">
+            <div class="container-fluid menu-con-bootstrap">
                 <a href="index.html">
-                    <img class="logo-en-menu" src="imagenes/tranki-punki-logo-header.svg" alt="Logo de tranki punki">
+                    <img class="logo-tp" src="imagenes/tranki-punki-logo-header.svg" alt="Logo de tranki punki">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -62,15 +62,15 @@
             <hr>
         </nav>
     </header>
-    <!-- Título Imagen Responsive -->
+    <!-- Título Imagen  -->
     <div class="titulo">
-        <img class="titulo-sin-animacion" src="imagenes/tranki-punki-titulo.png" alt="Galería de fotos de Tranki Punki">
-    </div>
+        <img class="titulo-tp" src="imagenes/tranki-punki-titulo.png" alt="Biografía de Tranki Punki">
+    </div> 
     <!-- Sección de la Galería -->
     <h2 class="h2-galeria">GALERÍA</h2>
     <p class="texto-en-bloque-galeria">Aquí podrás ver regristros fotográficos realizados por la fotógrafa <a href="https://www.instagram.com/dayolmos_/">Day Olmos.</a></p>
     <!-- Carrousel -->
-    <section class= "container">
+    <section class= "seccion-galeria container">
         <div class="row">
             <div class="col-1">
             </div>
@@ -163,16 +163,15 @@
         </div>
     </section>
     <!-- Pie de página -->
-    <!-- Pie de página -->
     <footer>
-        <div class="footer-galeria footer-general">
+        <div class="pie-tp pie-galeria">
             <hr> 
-            <h1>TrankiPunki.com - Galería</h1>
+            <h1>TrankiPunki.com - Galería de fotos</h1>
             <!-- Menú del footer-->
             <nav class="nav-del-footer">
                 <ul class="nav-del-footer-main">
                     <li class="inicio-li">
-                        <a class="footer-nav-link" href="#">INICIO</a>
+                        <a class="footer-nav-link" href="index.html">INICIO</a>
                     </li>
                     <li class="bio-li">
                         <a class="footer-nav-link" href="bio.html">BIO</a>
