--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <!-- Encabezado -->
     <header>
         <!-- Menú con Bootstrap-->
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-expand-sm navbar-dark">
+            <div class="container-fluid menu-con-bootstrap">
                 <a href="#">
-                    <img class="logo-en-menu" src="imagenes/tranki-punki-logo-header.svg" alt="Logo de tranki punki">
+                    <img class="logo-tp" src="imagenes/tranki-punki-logo-header.svg" alt="Logo de tranki punki">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -62,7 +62,7 @@
             <hr>
         </nav>
     </header>
-    <main class= "container-fluid">
+    <main class= "container-fluid video-del-background">
         <div class="row">
             <div class="col-12">
                 <video class="video" autoplay muted loop>  
@@ -91,7 +91,7 @@
     </main>
     <!-- Pie de página -->
     <footer>
-        <div class="footer-general">
+        <div class="pie-tp">
             <hr> 
             <h1>TrankiPunki.com - Inicio</h1>
             <!-- Menú del footer-->
