--- a/galeria.html
+++ b/galeria.html
@@ -69,6 +69,8 @@
     <!-- Sección de la Galería -->
     <h2 class="h2-galeria">GALERÍA</h2>
     <p class="texto-en-bloque-galeria">Aquí podrás ver regristros fotográficos realizados por la fotógrafa <a href="https://www.instagram.com/dayolmos_/">Day Olmos.</a></p>
+    <p class="texto-galeria-portrait">Girá tu dispositivo para visualizar la foto completa.</p>
+    <p class="texto-galeria-portrait">📸 <a href="https://www.instagram.com/dayolmos_/">Day Olmos</a>.</p>
     <!-- Carrousel -->
     <section class= "seccion-galeria container">
         <div class="row">
