--- a/tienda.html
+++ b/tienda.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Conocé las notas de prensa a Tranki Punki">
-    <meta name="keywords" content="noticias de tranki punki, noticias musicales, telam, cba24n, indiehoy, la izquierda diario, la voz del interior, la voz, marcha, notas feministas">
+    <meta name="description" content="Tienda virtual del merchandising oficial de Tranki Punki">
+    <meta name="keywords" content="merchandising de tranki punki, chop de tranki punki, llavero de tranki punki, disco de tranki punki, indiehoy, la izquierda diario, la voz del interior, la voz, marcha, notas feministas">
     <link rel="icon" type="image/png" href="./imagenes/favicons/favicon16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="./imagenes/favicons/favicon32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="./imagenes/favicons/favicon96x96.png" sizes="96x96">
@@ -158,5 +158,9 @@
     </footer>
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="js/mainVariables.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/paymentMethodsCalculator.js"></script>
+    <script src="js/tienda.js"></script>
 </body>
 </html>
